[gd_scene load_steps=6 format=3 uid="uid://b31yfdjp8wory"]

[ext_resource type="PackedScene" uid="uid://b6u1qbm47st80" path="res://Scenes/Interface/3d_menu_scene.tscn" id="1_66aow"]
[ext_resource type="PackedScene" uid="uid://c1yfougaum7yi" path="res://Scenes/Interface/fader.tscn" id="1_jtj5b"]
[ext_resource type="Script" path="res://Scenes/Interface/main_menu.gd" id="1_v114r"]
[ext_resource type="FontFile" uid="uid://ch2sruuxx7k1v" path="res://Fonts/alagard.ttf" id="4_qq2h5"]
[ext_resource type="AudioStream" uid="uid://ceuhb3eirlvfc" path="res://Scenes/Interface/button.wav" id="5_4xnnp"]

[node name="MainMenu" type="Node3D"]
process_mode = 3
script = ExtResource("1_v114r")
gameScene = "res://Scenes/level.tscn"

[node name="3DMenuScene" parent="." instance=ExtResource("1_66aow")]
process_mode = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Fader" parent="CanvasLayer" instance=ExtResource("1_jtj5b")]
process_mode = 3

[node name="Control" type="Control" parent="CanvasLayer/Fader"]
process_mode = 3
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Fader/Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -67.5
offset_right = 84.0
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Fader/Control/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_qq2h5")
theme_override_font_sizes/font_size = 32
text = "Home Alone"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Fader/Control/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer"]
process_mode = 3
layout_mode = 2

[node name="Play" type="Button" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_qq2h5")
theme_override_font_sizes/font_size = 16
text = "Start Game"

[node name="Credits" type="Button" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_qq2h5")
theme_override_font_sizes/font_size = 16
text = "Credits"

[node name="Quit" type="Button" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_qq2h5")
theme_override_font_sizes/font_size = 16
text = "Exit"

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/Fader/Control/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer2"]
process_mode = 3
layout_mode = 2

[node name="Options" type="Button" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_qq2h5")
theme_override_font_sizes/font_size = 16
text = "EN"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_4xnnp")
volume_db = -16.0
pitch_scale = 0.57

[connection signal="fadeFinished" from="CanvasLayer/Fader" to="." method="_on_fader_fade_finished"]
[connection signal="pressed" from="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer2/VBoxContainer/Options" to="." method="_on_options_pressed"]
